# weaviate-cli

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  .travis.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cli.py  click_test.py  install.sh  publish.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.json  setup.cfg  setup.py  weaviate-cli  weaviate-cli.py  weaviate-cli.spec  weaviate.py
.claude/skills/contributing-to-weaviate-cli/: SKILL.md
.claude/skills/contributing-to-weaviate-cli/references/: adding-commands.md  architecture.md  code-review.md  issue-workflow.md  testing.md
.claude/skills/operating-weaviate-cli/: SKILL.md
.claude/skills/operating-weaviate-cli/references/: backups.md  benchmark.md  cluster.md  collections.md  config-management.md  data.md  exports.md  rbac.md  search.md  tenants.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: main.yaml  release.yaml
lib/commands/: create.py  delete.py  get.py  query.py  restore.py  update.py
lib/managers/: collection_manager.py  config_manager.py  tenant_manager.py
modules/: Clusters.py  DataImport.py  Empty.py  Helpers.py  Init.py  Messages.py  Sandbox.py  SchemaExport.py  SchemaImport.py  Truncate.py  Weaviate.py  __init__.py  commands.py  config.py  upgrade.py
modules/input/: english_text.py  user.py
modules/schema/: import.py
semi/: misc.py  prompt.py  utils.py  version.py
semi/classification/: commands.py
semi/cloud/: commands.py
semi/commands/: data.py  misc.py  ping.py  prompt.py  schema.py  wcs.py
semi/config/: commands.py  config_values.py  configuration.py  manage.py
semi/data/: commands.py
semi/schema/: commands.py
semi/test/: schema_test.py
test/: README.md  actions.json  create_test_config.bash  data.json  docker-compose.yaml  docker-compose.yml  integration_test.py  ontology.json  run_integration_test.sh  schema.json  test_cli.py  things.json  unit_test.py
test/config/: config_test.py
test/integration/: test_auth_integration.py  test_create_data_return_collection.py  test_data_integration.py  test_export_integration.py  test_integration.py
test/test_managers/: test_collection_manager.py  test_config_manager.py  test_data_manager.py  test_shard_manager.py
test/unittests/: conftest.py  test_cli.py  test_defaults.py  test_utils.py
test/unittests/test_managers/: test_alias_manager.py  test_backup_manager.py  test_cluster_manager.py  test_collection_manager.py  test_config_manager.py  test_data_manager.py  test_export_manager.py  test_node_manager.py  test_role_manager.py  test_shard_manager.py  test_tenant_manager.py  test_user_manager.py
tools/: publish.sh
weaviate_cli/: __init__.py  defaults.py  utils.py  version.py
weaviate_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
weaviate_cli/commands/: add.py  assign.py  batch.py  benchmark.py  cancel.py  create.py  delete.py  get.py  query.py  restore.py  revoke.py  update.py
weaviate_cli/completion/: complete.py
weaviate_cli/datasets/: __init__.py  production_companies.json
weaviate_cli/managers/: alias_manager.py  backup_manager.py  batch_manager.py  benchmark_manager.py  cluster_manager.py  collection_manager.py  config_manager.py  data_manager.py  export_manager.py  node_manager.py  role_manager.py  shard_manager.py  tenant_manager.py  user_manager.py
weaviate_cli/types/: models.py
