[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >6.2",
    "wheel >= 0.38.1",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''
