[metadata]
name = weaviate-cli
description = Command line interface to interact with weaviate
url = https://github.com/weaviate/weaviate-cli
download_url = https://github.com/weaviate/weaviate-cli
author = Weaviate
author_email = hello@weaviate.io
keywords = cli, weaviate
license = BSD 3-clause
platforms = Linux
dynamic = ["version"]
project_urls =
    Docs = https://github.com/weaviate/weaviate-cli/blob/main/README.rst
    Bugs = https://github.com/weaviate/weaviate-cli/issues

license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data = True
python_requires = >=3.9
install_requires =
    weaviate-client @ git+https://github.com/weaviate/weaviate-python-client.git@1.28/add-support-for-rbac
    #weaviate-client>=4.5.0
    click==8.1.7
    semver>=3.0.2
    numpy>=1.24.0
    importlib-resources>=5.0.0
setup_requires =
    pip
    setuptools
zip_safe = False
packages =
    weaviate_cli
    weaviate_cli.commands
    weaviate_cli.datasets
    weaviate_cli.managers
py_modules =
    cli

[options.entry_points]
console_scripts =
    weaviate-cli = cli:main

[options.package_data]
weaviate_cli = datasets/*.json
